# mcp-news

./: .env.template  .gitignore  README.md  deploy.sh  news_gatherer.py  news_mcp_server.py  pyproject.toml  zz_news_mcp_server.py.bk
agent_instructions/: hidden_pattern_agent.txt  journalist.txt  town_crier.txt
feed_sources/: feed_sources.py
src/news_mcp/: server.py
